--- a/week-18/18.1/package.json
+++ b/week-18/18.1/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.0",
+    "@types/express": "^5.0.0",
+    "express": "^4.21.2",
     "prisma": "^6.4.0",
     "typescript": "^5.7.3"
   }
