--- a/(15.2)barily-frontend/package.json
+++ b/(15.2)barily-frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/lodash": "^4.17.15",
+    "@types/node": "^22.13.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
