--- a/week-21-chatapp/apps/ws-server/tsconfig.json
+++ b/week-21-chatapp/apps/ws-server/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends":"@repo/typescript-config/backend.json"
+  "extends":"@repo/typescript-config/backend.json",
+  "compilerOptions":{
+    "rootDir":"./src",  // here we have overridden bcoz doing this in backend.json was creating confusion
+    "outDir":"./dist"
+  }
 }
