--- a/week-22/draw-app/apps/http-backend/package.json
+++ b/week-22/draw-app/apps/http-backend/package.json
@@ -8,9 +8,15 @@
     "dev": " npm run build && npm run start"
   },
   "dependencies": {
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies":{
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.1",
-    "express": "^4.21.2"
+    "@types/jsonwebtoken": "^9.0.9",
+    "@repo/backend-common":"workspace:*",
+    "@repo/common":"workspace:*"
   },
   "keywords": [],
   "author": "",
