added db calls for signup

--- a/week-22/draw-app/apps/http-backend/package.json
+++ b/week-22/draw-app/apps/http-backend/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "@repo/db":"workspace:*"
   },
   "devDependencies":{
     "@repo/typescript-config": "workspace:*",
