--- a/week-22/draw-app/apps/ws-backend/package.json
+++ b/week-22/draw-app/apps/ws-backend/package.json
@@ -16,7 +16,8 @@
     "@repo/typescript-config": "workspace:*",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.18.0",
-    "@repo/backend-common":"workspace:*"
+    "@repo/backend-common":"workspace:*",
+    "@repo/db":"workspace:*"
   },
   "keywords": [],
   "author": "",
