--- a/week-22/draw-app/apps/http-backend/package.json
+++ b/week-22/draw-app/apps/http-backend/package.json
@@ -8,16 +8,18 @@
     "dev": " npm run build && npm run start"
   },
   "dependencies": {
+    "@repo/db": "workspace:*",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "@repo/db":"workspace:*"
+    "jsonwebtoken": "^9.0.2"
   },
-  "devDependencies":{
+  "devDependencies": {
+    "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@repo/backend-common":"workspace:*",
-    "@repo/common":"workspace:*"
+    "@types/jsonwebtoken": "^9.0.9"
   },
   "keywords": [],
   "author": "",
