--- a/week-22/draw-app/apps/http-backend/package.json
+++ b/week-22/draw-app/apps/http-backend/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@repo/db": "workspace:*",
+    "@types/axios": "^0.14.4",
     "@types/cors": "^2.8.17",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
