--- a/week-22/draw-app/apps/excaildraw-frontend/package.json
+++ b/week-22/draw-app/apps/excaildraw-frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.4",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
