--- a/week-22/draw-app/apps/excaildraw-frontend/package.json
+++ b/week-22/draw-app/apps/excaildraw-frontend/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.4",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
@@ -22,12 +25,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.17.30",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@repo/backend-common": "workspace:*" 
   }
 }
