--- a/week-22/draw-app/apps/http-backend/package.json
+++ b/week-22/draw-app/apps/http-backend/package.json
@@ -12,6 +12,7 @@
     "@types/axios": "^0.14.4",
     "@types/cors": "^2.8.17",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
@@ -20,6 +21,7 @@
     "@repo/backend-common": "workspace:*",
     "@repo/common": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9"
   },
