--- a/doceker-week-27/package.json
+++ b/doceker-week-27/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc -b",
     "start":"node dist/index.js",
-    "dev":"npm run build && npm run start"
+    "dev:docker":"npx prisma migrate dev &&node dist/index.js"
+    
   },
   "keywords": [],
   "author": "",
